--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -17,3 +17,22 @@
   border-radius: 20px;
   padding: 34px 36px;
 }
+
+.modal__close-button {
+  background-image: url("../images/Close-x-button.svg");
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
+  left: calc(95% + 5px);
+}
+
+.modal__add-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
