--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -10,16 +10,46 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.modal__title {
+  /* margin: 28px 0 24px 0; */
+  margin-bottom: 24px;
+}
+
 .modal__content {
   background-color: #fff;
   max-width: 496px;
   width: 100%;
+  height: 436px;
   border-radius: 20px;
-  padding: 34px 36px;
+  padding: 0 28px 36px 28px;
+  color: #000;
+  font-family: Cabinet Grotesk;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.modal__content-item {
+  width: 498px;
+  height: 610px;
+  z-index: -2;
+  width: 498px;
+  height: 610px;
+}
+
+.modal__image {
+  width: 568px;
+  position: relative;
+  bottom: calc(10% - 0.5px);
+  z-index: -1;
+  display: flex;
+  right: calc(7% + 1px);
+  border-radius: 20px 20px 0 0;
 }
 
 .modal__close-button {
-  background-image: url("../images/Close-x-button.svg");
+  background-image: url("../images/grey-x-button.svg");
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -29,10 +59,107 @@
   background-size: contain;
   position: relative;
   left: calc(95% + 5px);
+  top: calc(4% + 5px);
+  color: #0000004d;
+  opacity: 1;
+}
+
+.modal__description {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  bottom: 5%;
+  gap: 10px;
+  font-family: Cabinet Grotesk;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.modal__close-button_image {
+  background-image: url("../images/white-x-button.svg");
 }
 
 .modal__add-form {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+}
+
+.modal__add-form_button {
+  position: relative;
+  top: 32px;
+  border-radius: 4px;
+  width: 124px;
+  height: 36px;
+  border: none;
+  background: #000;
+  color: #fff;
+  font-family: Cabinet Grotesk;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.modal__add-form_button:hover {
+  background: rgba(0, 0, 0, 0.6);
+  cursor: pointer;
+}
+
+.modal__add-form_button:disabled {
+  background: rgba(0, 0, 0, 0.3);
+  cursor: not-allowed;
+}
+
+.modal__add-form_button:disabled:hover {
+  background: rgba(0, 0, 0, 0.3);
+  cursor: not-allowed;
+}
+
+/* .modal__input-container {
+
+} */
+
+.modal__label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+  border-bottom: 1px solid #000;
+}
+
+.modal__input {
+  border: none;
+  color: rgba(0, 0, 0, 0.5);
+  font-family: Cabinet Grotesk;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.modal__input-title {
+  margin: 0 0 8px 0;
+}
+
+.modal__radio-title {
+  margin: 0 0 12px 0;
+  color: #000;
+  font-family: Cabinet Grotesk;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.modal__radio-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  color: #000;
+  font-family: Cabinet Grotesk;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
 }
