--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -7,7 +7,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+}
+
+.modal__overlay {
   background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal__title {
@@ -126,7 +138,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
-  border-bottom: 1px solid #000;
 }
 
 .modal__input {
@@ -137,6 +148,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
+  border-bottom: 1px solid #000;
 }
 
 .modal__input-title {
