--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -50,6 +50,7 @@
 
 .modal__image {
   width: 568px;
+  height: 570px;
   position: relative;
   bottom: calc(13% + 0.5px);
   z-index: -1;
@@ -128,10 +129,6 @@
   background: rgba(0, 0, 0, 0.3);
   cursor: not-allowed;
 }
-
-/* .modal__input-container {
-
-} */
 
 .modal__label {
   display: flex;
