--- a/src/components/UserPlaceHolder/UserPlaceHolder.css
+++ b/src/components/UserPlaceHolder/UserPlaceHolder.css
@@ -1,13 +1,13 @@
 .user__avatar-placeholder {
-  width: 40px; /* Adjust the size as needed */
+  width: 40px;
   height: 40px;
   border-radius: 50%;
   border: 2px solid #000;
-  background-color: #000; /* Set background color */
+  background-color: #000;
   opacity: 50%;
-  color: #fff; /* Set text color */
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px; /* Adjust font size */
+  font-size: 16px;
 }
