--- a/src/components/UserPlaceHolder/UserPlaceHolder.css
+++ b/src/components/UserPlaceHolder/UserPlaceHolder.css
@@ -11,3 +11,11 @@
   justify-content: center;
   font-size: 16px;
 }
+
+.user__avatar-placeholder_hidden {
+  display: none;
+}
+
+.user__avatar-placeholder_visible {
+  display: block;
+}
