--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -15,8 +15,24 @@
   border-radius: 4px;
 }
 
-/* .card_like:active {
-} */
+.card_like {
+  position: relative;
+  bottom: 89%;
+  left: 3%;
+  width: 17px;
+  height: 15px;
+  aspect-ratio: 1;
+  border-image: radial-gradient(var(--c) 69%, #0000 70%) 84.5%/50%;
+  clip-path: polygon(-42% 0, 50% 91%, 142% 0);
+}
+
+.card_like-visible {
+  --c: black;
+}
+
+.card_like-hidden {
+  background-color: transparent;
+}
 
 .card_image {
   width: 328px;
