work on edit profile

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -180,17 +180,7 @@
   bottom: 118px;
 }
 
-.modal__delete-button {
-  color: #ff4d00;
-  background: none;
-  border: none;
-  font-family: Cabinet Grotesk;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 24px;
-  cursor: pointer;
-}
-
+.modal__delete-button,
 .modal__delete-button_visible {
   color: #ff4d00;
   background: none;
@@ -202,8 +192,8 @@
   cursor: pointer;
 }
 
-.modal_delete-button_hidden {
-  /* display: none; */
+.modal__delete-button_hidden {
+  display: none;
 }
 
 /* Delete modal css */
