--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -16,6 +16,12 @@
   top: 15px;
 }
 
+.profile__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
 .profile__logo {
   display: flex;
   align-items: center;
