--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -196,22 +196,6 @@
   display: none;
 }
 
-/* Delete modal css */
-.delete__modal-container {
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 2rem;
-  width: 30em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
 .delete__modal {
   background-color: #fff;
   border-radius: 10px;
@@ -272,3 +256,53 @@
 } */
 
 /* ^Delete modal css^ */
+
+.profile__content {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1rem;
+  height: 280px;
+  width: 670px;
+  position: fixed;
+  top: 25%;
+}
+
+.profile__modal-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.profile__modal-close {
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.profile__modal-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.profile__modal-input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+  border: none;
+  border-bottom: 1px solid #000;
+}
+
+.profile__modal-save {
+  border-radius: 4px;
+  width: 124px;
+  height: 36px;
+  border: none;
+  background: #000;
+  color: #fff;
+  font-family: Cabinet Grotesk;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  cursor: pointer;
+}
