--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,6 +45,19 @@
 	display: flex;
 	align-items: center;
 	gap: 12px;
+	margin-left: auto;
+}
+
+.header__user-subcontainer {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	
+}
+
+.header__link {
+	text-decoration: none;
+	color: black;
 }
 
 .header__username {
