--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -6,16 +6,15 @@
 .switch__box {
 	border-radius: 25px;
 	border: 2px solid black;
-	width: 50px;
-	height: 30px;
-	/* outline: none; */
+	width: 56px;
+	height: 28px;
 	appearance: none;
 }
 
 .switch__slider {
 	border-radius: 20px;
-	width: 30px;
-	height: 30px;
+	width: 26px;
+	height: 26px;
 	background-color: black;
 	color: white;
 	text-align: center;
@@ -25,28 +24,47 @@
 }
 
 .switch__slider-F {
-	left: 20px;
+	left: 29px;
+	top: 1px;
 }
 
 .switch__slider-C {
-	left: -1px;
-}
-
-.switch__active {
-	color: white;
-	font-size: 16px;
+	left: 0px;
+	top: 1px;
 }
 
 .switch__temp-C {
+	font-family: CabinetGrotesk-regular;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 17.36px;
+	text-align: center;
+	text-underline-position: from-font;
+	text-decoration-skip-ink: none;
+
+	
 	position: absolute;
-	top: -10px;
-	left: 9px;
-	color: white;
+	top: -8px;
+	left: 8px;
+	color: #00000080;
 }
 
 .switch__temp-F {
+	font-family: CabinetGrotesk-regular;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 17.36px;
+	text-align: center;
+	text-underline-position: from-font;
+	text-decoration-skip-ink: none;
+
+	
 	position: absolute;
-	top: -10px;
-	left: 31px;
+	top: -8px;
+	left: 39px;
+	color: #00000080;
+}
+
+.switch__active {
 	color: white;
 }
