--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,21 +1,22 @@
-.cards__list {
+.sidebar {
+	width: 229px;
 	display: flex;
-	flex-wrap: wrap;
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
 	gap: 20px;
-	margin-bottom: 171px;
 }
 
-.cards__text {
-	font-family: CabinetGrotesk-Bold;
+.sidebar__avatar {
+	width: 56px;
+	height: 56px;
+}
+
+.sidebar__username {
+	font-family: CabinetGrotesk-medium;
 	font-size: 20px;
 	font-weight: 700;
 	line-height: 24.8px;
 	text-align: left;
 	text-underline-position: from-font;
 	text-decoration-skip-ink: none;
+
+	margin-top: 16px;
 }
-
-
