--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,12 +1,25 @@
 .sidebar {
 	width: 229px;
 	display: flex;
-	gap: 20px;
+	gap: none;
+	flex-direction: column;
+}
+
+.sidebar__user-container {
+	display: flex;
+	margin-bottom: 24px;
 }
 
 .sidebar__avatar {
 	width: 56px;
 	height: 56px;
+	background: gray;
+	border-radius: 28px;
+	color: white;
+	font-size: 40px;
+	text-align: center;
+	font-family: CabinetGrotesk-Bold;
+	vertical-align: center;
 }
 
 .sidebar__username {
@@ -14,9 +27,29 @@
 	font-size: 20px;
 	font-weight: 700;
 	line-height: 24.8px;
+	margin-left: 16px;
 	text-align: left;
 	text-underline-position: from-font;
 	text-decoration-skip-ink: none;
 
 	margin-top: 16px;
+}
+
+.sidebar__modify-profile {
+	font-family: CabinetGrotesk-bold;
+	font-size: 20px;
+	border: none;
+	background: none;
+	outline: none;
+	text-align: left;
+	margin-bottom: 8px;
+}
+
+.sidebar__signout {
+	font-family: CabinetGrotesk-bold;
+	font-size: 20px;
+	border: none;
+	background: none;
+	outline: none;
+	text-align: left;
 }
