--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,7 +13,7 @@
 }
 
 .header__add-clothes-btn {
-	margin: 0 20px 0 auto;
+	margin: 0;
 	
 	font-family: CabinetGrotesk-Bold;
 	font-size: 20px;
@@ -28,7 +28,39 @@
 
 }
 
-.header__date-and-location {
+.header__login-btn {
+	margin: 0;
+	
+	font-family: CabinetGrotesk-Bold;
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 24px;
+	text-align: left;
+	text-underline-position: from-font;
+	text-decoration-skip-ink: none;
+
+	border: none;
+	background: none;
+
+}
+
+.header__signup-btn {
+	margin: 0;
+	
+	font-family: CabinetGrotesk-Bold;
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 24px;
+	text-align: left;
+	text-underline-position: from-font;
+	text-decoration-skip-ink: none;
+
+	border: none;
+	background: none;
+
+}
+
+.header__button {
 	margin-left: 24px;
 	
 	font-family: CabinetGrotesk-Bold;
@@ -44,7 +76,7 @@
 .header__user-container {
 	display: flex;
 	align-items: center;
-	gap: 12px;
+	gap: 20px;
 	margin-left: auto;
 }
 
@@ -71,3 +103,14 @@
 	text-decoration-skip-ink: none;
 }
 
+.header__avatar {
+	width: 40px;
+	height: 40px;
+	background: gray;
+	border-radius: 20px;
+	color: white;
+	font-size: 30px;
+	text-align: center;
+	font-family: CabinetGrotesk-Bold;
+	vertical-align: center;
+}
