--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -114,7 +114,7 @@
 }
 
 .modal__content_type_form > .modal__form > .modal__submit {
-	width: 124px;
+	width: fit-content;
 	height: 36px;
 	border-radius: 4px;
 	padding: 8px 12px;
