Sprint 14 submission attempt 3

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -12,7 +12,7 @@
 
 	padding: 2px 12px;
 	background-color: white;
-	font-family: CabinetGrotesk-Bold; /* This isn't the like button, but note: get the solid like button from figma as well and implement */
+	font-family: CabinetGrotesk-Bold; 
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 20px;
