--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,14 @@
 	padding: 32px 0 28px;
 }
 
+.header__btn {
+	border: none;
+	outline: none;
+	background: none;
+	font-size: 20px;
+	font-family: CabinetGrotesk-Bold;
+}
+
 .header__date-and-location {
 	margin: 0;
 }
@@ -13,7 +21,7 @@
 }
 
 .header__add-clothes-btn {
-	margin: 0;
+	margin: 0 20px 0 auto;
 	
 	font-family: CabinetGrotesk-Bold;
 	font-size: 20px;
@@ -28,39 +36,7 @@
 
 }
 
-.header__login-btn {
-	margin: 0;
-	
-	font-family: CabinetGrotesk-Bold;
-	font-size: 20px;
-	font-weight: 700;
-	line-height: 24px;
-	text-align: left;
-	text-underline-position: from-font;
-	text-decoration-skip-ink: none;
-
-	border: none;
-	background: none;
-
-}
-
-.header__signup-btn {
-	margin: 0;
-	
-	font-family: CabinetGrotesk-Bold;
-	font-size: 20px;
-	font-weight: 700;
-	line-height: 24px;
-	text-align: left;
-	text-underline-position: from-font;
-	text-decoration-skip-ink: none;
-
-	border: none;
-	background: none;
-
-}
-
-.header__button {
+.header__date-and-location {
 	margin-left: 24px;
 	
 	font-family: CabinetGrotesk-Bold;
@@ -106,11 +82,11 @@
 .header__avatar {
 	width: 40px;
 	height: 40px;
-	background: gray;
-	border-radius: 20px;
-	color: white;
+	font-family: CabinetGrotesk-Bold;
 	font-size: 30px;
 	text-align: center;
-	font-family: CabinetGrotesk-Bold;
-	vertical-align: center;
+	background-color: #0080FF;
+	color: white;
+	border-radius: 20px;
 }
+
